--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ phases:
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         - pip3 install -r requirements.txt
+        - pip3 install unittest2
         - pytest test_main.py
   build:
     commands:
